cmake_minimum_required(VERSION 3.5)
project(crs_msgs)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

set(SRV_DEPS
  sensor_msgs
  std_msgs
  geometry_msgs
  trajectory_msgs
)

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(trajectory_msgs REQUIRED)

set(MSG_FILES
  msg/ProcessConfiguration.msg
  msg/ProcessMotionPlan.msg
  msg/ToolProcessPath.msg
)

set(SRV_FILES
  srv/CallFreespaceMotion.srv
  srv/GetROISelection.srv
  srv/LoadPart.srv
  srv/LocalizeToPart.srv
  srv/ExecuteAction.srv
  srv/GetAvailableActions.srv
  srv/PlanProcessMotions.srv
  srv/GetConfiguration.srv
  srv/RobotPositioner.srv
)

rosidl_generate_interfaces(${PROJECT_NAME}
  ${MSG_FILES}
  ${SRV_FILES}
  DEPENDENCIES ${SRV_DEPS}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_dependencies(rosidl_default_runtime)
ament_package()
