<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crs_robot_comms</name>
  <version>0.0.0</version>
  <description>Nodes to simplify robot communication for CRS application</description>
  <maintainer email="jrgichodevel@gmail.com">ros-industrial</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rosidl_default_generators</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>ur_dashboard_msgs</depend>
  <depend>crs_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
